-- map search listings alignment issues fixed -- let-us-help all modal alignment and font color issues fixed -- change link of advertise with us page from wordpress footer -- contact us page banner resize and nofee rental link issue fixed -- all banner of wordpress pages are resized

--- a/public/blog/wp-content/themes/nofeerentals/assets/css/main.css
+++ b/public/blog/wp-content/themes/nofeerentals/assets/css/main.css
@@ -2655,7 +2655,6 @@ footer .copyright .social-icons li a:hover {
     text-decoration: underline;
     background: none;
     border: none;
-    margin: 20px 0px 0px;
     padding: 0px;
     line-height: normal;
 }
